2006-07-29  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/msgwindow.c, src/msgwindow.h, src/callbacks.c, src/search.c:
   Remember Find in files directory for opening grep results.
 * Makefile.am: Add win32 build files to EXTRA_DIST.


2006-07-28  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/search.c, src/callbacks.c, src/dialogs.c:
   Added some options to the Find in files dialog, made search
   directory editable.


2006-07-28  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sciwrappers.h: Set PLAT_GTK before including ScintillaWidget.h.
 * src/Makefile.am, geany_windres.rc.in: Correct a typo.
 * scintilla/makefile.win32, src/makefile.win32, makefile.win32,
   tagmanager/makefile.win32, win32-config.h, geany_private.rc:
   Add makefiles for building on win32.


2006-07-27  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/sciwrappers.c, src/callbacks.c, src/utils.c, src/dialogs.c,
   src/keybindings.c:
   Removed unused colour parsing functions.
   Let the colour chooser pick the colour under the cursor.
 * data/filetypes.*, src/highlighting.c, src/utils.c:
   Fixed bug in parsing strings containing hex values, modified the
   styles to keep the syntax highlighting consistent.
 * src/main.c: Removed startup warning.
 * src/geany.h, src/main.c: Added Select All item to sensitive buttons.
 * src/win32.c, src/dialogs.c, src/callbacks.c:
   Let the colour chooser pick the colour under the cursor(Win32 code).
   Added some sanity checks.


2006-07-26  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/Makefile.am: Added target to remove geany_res.res when cleaning.
 * src/geany.h, src/main.c, src/callbacks.c, src/highlighting.c,
   src/document.c, src/dialogs.c, src/prefs.c, src/utils.c,
   src/win32.c, src/keybindings.c, src/gb.c, src/about.c:
   Removed macro GEANY_WIN32, use G_OS_WIN32 instead.
   Introduced global variables for PACKAGE_DATA_DIR and
   PACKAGE_LOCALE_DIR, removed macro DOCDIR