@@ -11,7 +11,9 @@ margin_linenumber=0x000000;0xd0d0d0;false;false
 margin_folding=0x000000;0xdfdfdf;false;false
 # background colour of the current line, only the second and third argument is interpreted
 # use the third argument to enable or disable the highlighting of the current line (has to be true/false)
-current_line=0;0xe5e5e5;true;false
+current_line=0x0;0xe5e5e5;true;false
+# colour of the caret(the blinking cursor), only first argument is interpreted
+caret=0x000000;0x0;false;false
 # style of folding icons, only first and second arguments are used, valid values are:
 # first argument:  1 for boxes, 2 for circles
 # second argument: 1 for straight lines, 2 for curved lines
