@@ -1373,6 +1373,13 @@
 									<entry>brace_bad=0x0000ff;0xFFFFFF;true;false</entry>
 								</row>
 								<row>
+									<entry>caret</entry>
+									<entry>The style for colouring the caret(the blinking cursor).
+										   Only the first argument is interpreted.
+									</entry>
+									<entry>caret=0x000000;0x0;false;false</entry>
+								</row>
+								<row>
 									<entry>current_line</entry>
 									<entry>The style for colouring the background of the current
 										   line. Only the second argument is interpreted.
