@@ -1,3 +1,9 @@
+2006-07-30  Enrico Tröger  <enrico.troeger@uvena.de>
+
+ * doc/geany.docbook, data/filetypes.common, src/.c:
+   Added style to change the colour of the caret(closes #1530486).
+
+
 2006-07-29  Nick Treleaven  <nick.treleaven@btinternet.com>
 
  * src/msgwindow.c, src/msgwindow.h, src/callbacks.c, src/search.c:
